...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cBoxTagFilter"
        app:layout_constraintStart_toEndOf="@+id/imgBtnTagMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cBoxTagFilter"
        android:layout_width="wrap_content"
...
